Changes for 4.2.5rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 4.2.4

4.2.4rc2 was released as 4.2.4 without any changes

--------------------------------------------------------------------------------
Changes for 4.2.4rc2

Bug fixes:
...G...PS. [ZBX-15827] fixed Windows agent build (wiper)

--------------------------------------------------------------------------------
Changes for 4.2.4rc1

New features:
..F.....S. [ZBXNEXT-5124,ZBX-15827] extended preprocessing steps with final result row; improved input validation in preprocessing steps (miks, wiper)
.......PS. [ZBXNEXT-2880] added access to vmware datastore at vmware vCenter level (MVekslers)
..F....... [ZBXNEXT-5163] added display of maintenance information in Configuration section for hosts in maitenance (vasilijs)
..F....... [ZBXNEXT-5036] added preloader for popup menus (ashubin)
...G...... [ZBXNEXT-287] added SSL support for agent HTTP checks (asestakovs)
...G...PS. [ZBXNEXT-5179] added option to specify absolute path in LoadModule; thanks to Glebs Ivanovskis for the patch (asestakovs)

Bug fixes:
........S. [ZBX-16315] fixed Zabbix server not to cause foreign key constraint failure on Zabbix proxy when changing and sending configuration at the same time (vso)
...G...PS. [ZBX-9867] improved Zabbix daemon termination by not using signal unsafe functions in signal handler; improved Zabbix server and Zabbix proxy process termination by stopping data collection and waiting for history syncers to finish (vso)
..F....... [ZBX-16217] fixed value trim in multiline input (miks)
...G...... [ZBX-16218] fixed zabbix_sender does not clean up its semaphores (akozlovs)
..F....... [ZBX-16152] fixed not data loss on saving host prototypes by user with insufficient permissions (averza)
..F....... [ZBX-16126] fixed checkbox selection on navigate to inherited template in triggers and items (talbergs)