@@ -34,8 +34,8 @@ $fields = [
 	'profileIdx' =>		[T_ZBX_STR,			O_OPT, null,	null,				null],
 	'profileIdx2' =>	[T_ZBX_STR,			O_OPT, null,	null,				null],
 	'name' =>			[T_ZBX_STR,			O_OPT, null,	null,				null],
-	'width' =>			[T_ZBX_INT,			O_OPT, null,	BETWEEN(20, 65535),	null],
-	'height' =>			[T_ZBX_INT,			O_OPT, null,	BETWEEN(0, 65535),	null],
+	'width' =>			[T_ZBX_INT,			O_OPT, null,	BETWEEN(CPieGraphDraw::GRAPH_WIDTH_MIN, 65535),		null],
+	'height' =>			[T_ZBX_INT,			O_OPT, null,	BETWEEN(CPieGraphDraw::GRAPH_HEIGHT_MIN, 65535),	null],
 	'graphtype' =>		[T_ZBX_INT,			O_OPT, null,	IN('2,3'),			null],
 	'graph3d' =>		[T_ZBX_INT,			O_OPT, P_NZERO,	IN('0,1'),			null],
 	'legend' =>			[T_ZBX_INT,			O_OPT, null,	IN('0,1'),			null],
@@ -48,6 +48,12 @@ if (!check_fields($fields)) {
 validateTimeSelectorPeriod(getRequest('from'), getRequest('to'));
 
 $items = getRequest('items', []);
+
+if (!$items) {
+	show_error_message(_('No items defined.'));
+	exit();
+}
+
 CArrayHelper::sort($items, ['sortorder']);
 
 /*
